--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -22,9 +22,20 @@ jobs:
           mkdir secrets
           touch secrets/.env
           touch secrets/route-optima-firebase-adminsdk.json
-          
+
           echo ${{ secrets.env }} > secrets/.env
-          echo ${{ secrets.route-optima-firebase-adminsdk }} > secrets/route-optima-firebase-adminsdk.json
+          echo ${{ secrets.route_optima_firebase_adminsdk }} > secrets/route-optima-firebase-adminsdk.json
+
+    - name: printing secrets
+      run: |
+          cat {{ secrets.env }}
+          cat {{ secrets.route_optima_firebase_adminsdk }}
+
+    - name: printing secrets files
+      run: |
+          cat secrets/.env
+          cat secrets/route-optima-firebase-adminsdk.json
+    
 
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag fyp-backend:latest
