--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -20,6 +20,7 @@ jobs:
     - name: Make secrets folder for docker build
       run: |
           mkdir secrets
+          mdkir results
           touch secrets/.env
           touch secrets/route-optima-firebase-adminsdk.json
 
