--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "sanitize-html": "^2.11.0",
-    "sha256": "^0.2.0"
+    "sha256": "^0.2.0",
+    "vercel": "^34.2.6"
   }
 }
